# WTL4MinGW

./: CMakeLists.txt  Readme.md
atlport/include/: atlbase.h  atlconv.h  atldef.h  atlhost.h  atlwin.h  crtdbg.h
sample/Alpha/: CMakeLists.txt  stdafx.cpp  stdafx.h
sample/Alpha/res/: Thumbs.db
sample/BmpView/: CMakeLists.txt  mainfrm.h
sample/BmpView/res/: Thumbs.db
sample/GuidGen/: CMakeLists.txt  makefile  stdatl.h
sample/MDIDocVw/: CMakeLists.txt  mainfrm.h  stdafx.h
sample/MTPad/: CMakeLists.txt  MTPad.cpp  MTPad.rc  MTPadCE.rc  mainfrm.h  stdatl.h  view.h
sample/WTLExplorer/: CMakeLists.txt  MainFrm.Cpp  stdafx.h
sample/Wizard97Test/: CMakeLists.txt  stdafx.h
sample/Wizard97Test/Wizard/: TestWizard.cpp  TestWizardCompletionPage.cpp  TestWizardCompletionPage.h  TestWizardFilePreviewPage.cpp  TestWizardInfo.cpp  TestWizardOutputPage.cpp  TestWizardPathFilterPage.cpp  TestWizardSheet.cpp  TestWizardWelcomePage.cpp
sample/Wizard97Test/res/: Thumbs.db
stdext/include/: stdext.h  stdext.mpr  stlpatch.h
stdext/include/stdext/: Algorithm.h  Archive.h  Array.h  Basic.h  CharType.h  Counter.h  FileBuf.h  LargeInteger.h  Log.h  Memory.h  RegEx.h  SimpleMultiMap.h  Storage.h  String.h  TestCase.h  TypedPtrArray.h  tchar.h
stdext/include/stdext/archive/: ArchiveImpl.h  RecordArchive.h  (+4 more)
stdext/test/stdext/: TestStdExt.cpp  TestStdNew.cpp
wtl/include/: atlapp.h  atlcrack.h  atlctrls.h  atlctrlw.h  atlctrlx.h  atldlgs.h  atlframe.h  atlgdi.h  atlmisc.h  atlprint.h  atlres.h  atlresce.h  atlscrl.h  atlsplit.h  atltheme.h  atluser.h  atlwince.h
(+21 files in other folders)
